# tabular-ml

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
configs/: default.yaml
docs/: project-overview.md
notebooks/: 01_eda.ipynb  01_eda.py
scripts/: monitoring_demo.py
src/tabular_ml/: __init__.py  config.py
src/tabular_ml/api/: __init__.py  app.py  schemas.py
src/tabular_ml/data/: __init__.py  loader.py
src/tabular_ml/features/: __init__.py  engineering.py  pipeline.py
src/tabular_ml/models/: __init__.py  ensemble.py  evaluation.py  run_ensemble.py  train_all.py  trainer.py  tuning.py
src/tabular_ml/monitoring/: __init__.py  drift.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_api.py  test_config.py  test_data.py  test_ensemble.py  test_features.py  test_models.py  test_monitoring.py
